--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -33,3 +33,14 @@ jobs:
     # # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     # - name: Update dependency graph
     #   uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+
+
+    - name: Upload build artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: maven-build
+        path: target/*.jar   # uploads all JAR files from target/
+        if-no-files-found: error
+        retention-days: 7    # keep artifact for 7 days
+        compression-level: 6
+        overwrite: true
